// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCard creates correct snapshot for Jupyer stack type 1`] = `
<Card
  className="StackCard-card-1"
  raised={false}
>
  <withStyles(CardContent)>
    <div
      className="StackCard-cardHeader-2"
    >
      <div>
        <withStyles(Typography)
          type="headline"
        >
          name1
        </withStyles(Typography)>
        <div
          style={
            Object {
              "direction": "row",
              "display": "flex",
            }
          }
        >
          <withStyles(Typography)
            style={
              Object {
                "marginRight": 6,
              }
            }
            type="subheading"
          >
            Jupyter
          </withStyles(Typography)>
        </div>
      </div>
      <withStyles(CardMedia)
        className="StackCard-cardMedia-3"
        image="jupyter-logo.svg"
      />
    </div>
    <withStyles(Typography)
      component="p"
    >
      Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text.
    </withStyles(Typography)>
  </withStyles(CardContent)>
</Card>
`;

exports[`StackCard creates correct snapshot for Zeppelin stack type 1`] = `
<Card
  className="StackCard-card-1"
  raised={false}
>
  <withStyles(CardContent)>
    <div
      className="StackCard-cardHeader-2"
    >
      <div>
        <withStyles(Typography)
          type="headline"
        >
          name1
        </withStyles(Typography)>
        <div
          style={
            Object {
              "direction": "row",
              "display": "flex",
            }
          }
        >
          <withStyles(Typography)
            style={
              Object {
                "marginRight": 6,
              }
            }
            type="subheading"
          >
            Zeppelin
          </withStyles(Typography)>
        </div>
      </div>
      <withStyles(CardMedia)
        className="StackCard-cardMedia-3"
        image="zeppelin-logo.svg"
      />
    </div>
    <withStyles(Typography)
      component="p"
    >
      Web-based notebook that enables data-driven, interactive data analytics and collaborative documents with SQL, Scala and more.
    </withStyles(Typography)>
  </withStyles(CardContent)>
</Card>
`;

exports[`StackCard should provide defaults and hide actions if no stack is provided 1`] = `
<Card
  className="StackCard-card-1"
  raised={false}
>
  <withStyles(CardContent)>
    <div
      className="StackCard-cardHeader-2"
    >
      <div>
        <withStyles(Typography)
          type="headline"
        >
          Display Name
        </withStyles(Typography)>
        <div
          style={
            Object {
              "direction": "row",
              "display": "flex",
            }
          }
        >
          <withStyles(Typography)
            style={
              Object {
                "marginRight": 6,
              }
            }
            type="subheading"
          >
            Typename type
          </withStyles(Typography)>
        </div>
      </div>
      <withStyles(Icon)
        className="StackCard-cardIcon-4"
      >
        create
      </withStyles(Icon)>
    </div>
    <withStyles(Typography)
      component="p"
    >
      A description of the typeName purpose
    </withStyles(Typography)>
  </withStyles(CardContent)>
</Card>
`;

exports[`StackCard should show status ad buttons when status is ready 1`] = `
<Card
  className="StackCard-card-1"
  raised={false}
>
  <withStyles(CardContent)>
    <div
      className="StackCard-cardHeader-2"
    >
      <div>
        <withStyles(Typography)
          type="headline"
        >
          name1
        </withStyles(Typography)>
        <div
          style={
            Object {
              "direction": "row",
              "display": "flex",
            }
          }
        >
          <withStyles(Typography)
            style={
              Object {
                "marginRight": 6,
              }
            }
            type="subheading"
          >
            Jupyter
          </withStyles(Typography)>
          <withStyles(StackStatus)
            status="ready"
          />
        </div>
      </div>
      <withStyles(CardMedia)
        className="StackCard-cardMedia-3"
        image="jupyter-logo.svg"
      />
    </div>
    <withStyles(Typography)
      component="p"
    >
      Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text.
    </withStyles(Typography)>
  </withStyles(CardContent)>
  <StackCardActions
    deletePermission="delete"
    deleteStack={[Function]}
    openPermission="open"
    openStack={[Function]}
    stack={
      Object {
        "displayName": "name1",
        "id": "100",
        "status": "ready",
        "type": "jupyter",
      }
    }
    userPermissions={
      Array [
        "open",
        "delete",
      ]
    }
  />
</Card>
`;
